Fixed Header Wrapping Issue

--- a/style.css
+++ b/style.css
@@ -191,7 +191,6 @@ body {
     margin-bottom: 2rem;
     width: 100%;
     text-align: left;
-    white-space: nowrap;
 }
 
 #about-section {
